# bird-id-assistant

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/bird_id_assistant/: __init__.py  __main__.py  assistant.py  cli.py  data_cleaning.py  data_collection.py  db.py  util.py
