[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-id-assistant"
version = "0.0.0"
description = "LLM assistant for bird identification"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Jussi-Veikka Hynynen" }
]
classifiers = [
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "beautifulsoup4",
    "chromadb",
    "html2text",
    "ollama",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "flake8"
]

[project.scripts]
bia = "bird_id_assistant.cli:main"
