[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-id-assistant"
version = "0.0.0"
description = "LLM assistant for bird identification"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Jussi-Veikka Hynynen" }
]
classifiers = [
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "beautifulsoup4==4.13.3",
    "chromadb==0.6.3",
    "html2text==2024.2.26",
    "ollama==0.4.7",
    "requests==2.32.3",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "flake8"
]

[project.scripts]
bia = "bird_id_assistant.cli:main"
